Fixed layout problem.

--- a/ltbdb/Content/layout.less
+++ b/ltbdb/Content/layout.less
@@ -220,7 +220,7 @@ a {
 
 // details panel
 .details {
-	padding-bottom: 20px;
+	padding-bottom: 10px;
 
 	&:after {
 		content: '';
@@ -249,7 +249,7 @@ a {
 
 .tags {
 	margin-left: 10px;
-	padding-bottom: 20px;
+	padding-bottom: 10px;
 
 	&:after {
 		content: '';
